metadata/force-app/main/default/objects/DoA_Line_Item__c/DoA_Line_Item__c.object-meta.xml
<CustomObject>
    <description>BODEV-76: Custom object to copy Opportunity Product on creation of DoA record</description>
    <label>DoA Line Item</label>
    <nameField>
        <label>DoA Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DoA Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>