metadata/force-app/main/default/objects/DoA_Line_Item__c/fields/Conga_Family__c.field-meta.xml
<CustomField>
    <fullName>Conga_Family__c</fullName>
    <description>BODEV-76: Conga Family of the Opportunity Product</description>
    <label>Conga Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>