metadata/force-app/main/default/objects/DoA_Line_Item__c/fields/Default_Price__c.field-meta.xml
<CustomField>
    <fullName>Default_Price__c</fullName>
    <description>BODEV-76: Default Price of corresponding Opportunity Product</description>
    <label>Default Price</label>
    <precision>16</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>