metadata/force-app/main/default/objects/DoA_Line_Item__c/fields/Default_Price_ARR_One_off__c.field-meta.xml
<CustomField>
    <fullName>Default_Price_ARR_One_off__c</fullName>
    <description>BODEV-585: ARR value of Default Price.</description>
    <formula>IF( Product__r.For_Contract_Renewals__c ,  Default_Price__c * 12, Default_Price__c )</formula>
    <label>Default Price ARR/One-off</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>