metadata/force-app/main/default/objects/DoA_Line_Item__c/fields/Delegation_of_Authority__c.field-meta.xml
<CustomField>
    <fullName>Delegation_of_Authority__c</fullName>
    <description>BODEV-76: Master lookup to DoA record</description>
    <label>Delegation of Authority</label>
    <referenceTo>Delegation_of_Authority__c</referenceTo>
    <relationshipLabel>DoA Line Items</relationshipLabel>
    <relationshipName>DoA_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>