metadata/force-app/main/default/objects/DoA_Line_Item__c/fields/Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percentage__c</fullName>
    <description>BODEV-76: Discount % against Default Price</description>
    <formula>IF(
  Default_Price__c = 0,
  0,
  IF(
    Sales_Price__c &gt; Default_Price__c,
    0,
    (Default_Price__c - Sales_Price__c) / Default_Price__c
  )
)</formula>
    <label>Discount (%)</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>