metadata/force-app/main/default/objects/DoA_Line_Item__c/fields/For_Renewal__c.field-meta.xml
<CustomField>
    <fullName>For_Renewal__c</fullName>
    <description>BODEV-76: Flag to indicate if a product is subscription product or one-off product</description>
    <formula>Product__r.For_Contract_Renewals__c</formula>
    <label>For Renewal</label>
    <type>Checkbox</type>
</CustomField>