metadata/force-app/main/default/objects/DoA_Line_Item__c/fields/List_Price__c.field-meta.xml
<CustomField>
    <fullName>List_Price__c</fullName>
    <description>BODEV-76: List Price of corresponding Opportunity Product copied from Opportunity Product</description>
    <label>List Price</label>
    <precision>16</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>