metadata/force-app/main/default/objects/DoA_Line_Item__c/fields/List_Price_ARR_One_off__c.field-meta.xml
<CustomField>
    <fullName>List_Price_ARR_One_off__c</fullName>
    <description>BODEV-585: ARR value of List Price</description>
    <formula>IF( For_Renewal__c , List_Price__c * 12, List_Price__c )</formula>
    <label>List Price ARR/One-off</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>