metadata/force-app/main/default/objects/DoA_Line_Item__c/fields/Opportunity_Product__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>BODEV-76: Lookup to the corresponding Opportunity Product</description>
    <label>Opportunity Product</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>DoA Line Items</relationshipLabel>
    <relationshipName>DoA_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>