metadata/force-app/main/default/objects/DoA_Line_Item__c/fields/Part_of_a_package__c.field-meta.xml
<CustomField>
    <fullName>Part_of_a_package__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BODEV-76: Checkbox to indicate if the Opportunity Product is a part of package or not</description>
    <label>Part of a package?</label>
    <type>Checkbox</type>
</CustomField>