metadata/force-app/main/default/objects/DoA_Line_Item__c/fields/Price_Change__c.field-meta.xml
<CustomField>
    <fullName>Price_Change__c</fullName>
    <description>BODEV-76: Price Change of the Opportunity Product</description>
    <formula>IF(
  Discount_Percentage__c&gt;0,
  &quot;-&quot; &amp; TEXT(ROUND(Discount_Percentage__c*100, 3)) &amp; &quot;%&quot;, 
  IF(
    Default_Price__c = 0,
    &quot;0%&quot;,
    IF(
      Sales_Price__c &gt; Default_Price__c, 
      &quot;+&quot; &amp; TEXT(ABS(ROUND(((Default_Price__c - Sales_Price__c) / Default_Price__c) * 100, 3)))&amp;&quot;%&quot;,
      &quot;0%&quot;
    )
  )
)</formula>
    <label>Price Change</label>
    <type>Text</type>
</CustomField>