metadata/force-app/main/default/objects/DoA_Line_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>BODEV-76: Lookup to Prodcut</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>DoA Line Items</relationshipLabel>
    <relationshipName>DoA_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>