metadata/force-app/main/default/objects/DoA_Line_Item__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <description>BODEV-76: Product Code</description>
    <label>Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>