metadata/force-app/main/default/objects/DoA_Line_Item__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>BODEV-76: Quantity of Opportunity Product</description>
    <label>Quantity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>