metadata/force-app/main/default/objects/DoA_Line_Item__c/fields/Quote_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Line Item</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>DoA Line Items</relationshipLabel>
    <relationshipName>DoA_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>