metadata/force-app/main/default/objects/DoA_Line_Item__c/fields/Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Sales_Price__c</fullName>
    <description>BODEV-76: Sales Price of the corresponding Opportunity Product</description>
    <label>Sales Price</label>
    <precision>16</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>