metadata/force-app/main/default/objects/DoA_Line_Item__c/fields/Sales_Price_ARR_One_off__c.field-meta.xml
<CustomField>
    <fullName>Sales_Price_ARR_One_off__c</fullName>
    <description>BODEV-585: ARR value of Sales Price</description>
    <formula>IF( Product__r.For_Contract_Renewals__c ,  Sales_Price__c * 12, Sales_Price__c )</formula>
    <label>Sales Price ARR/One-off</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>