metadata/force-app/main/default/objects/DoA_Line_Item__c/fields/Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Price__c</fullName>
    <description>BODEV-76: Total Price of the Opportunity Product</description>
    <formula>Sales_Price__c * Quantity__c</formula>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>