metadata/force-app/main/default/objects/DoA_Line_Item__c/fields/Total_Price_ARR_One_off__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_ARR_One_off__c</fullName>
    <description>BODEV-585: ARR value of Total Price</description>
    <formula>IF( For_Renewal__c , Total_Price__c * 12, Total_Price__c )</formula>
    <label>Total Price ARR/One-off</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>